[tool.poetry]
name = "cds-eda"
version = "0.1.0"
description = ""
authors = ["pd1714git <pierre-olivier.donnat@polytechnique.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.2"
DateTime = "^4.3"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
